plugins/elements/gstqueue2.h
@@ -151,6 +151,8 @@ struct _GstQueue2
 
   guint64 ring_buffer_max_size;
   guint8 * ring_buffer;
+
+  volatile gint downstream_may_block;
 };
 
 struct _GstQueue2Class
